--- a/src/TechJobs/Views/List/Jobs.cshtml
+++ b/src/TechJobs/Views/List/Jobs.cshtml
@@ -3,5 +3,17 @@
 <h3>@ViewBag.jobs.Count Result(s)</h3>
 
 @{ 
-    // TODO #3 - Use the same list display from Views/Search/Index.cshtml 
-}
+// TODO #3 - Use the same list display from Views/Search/Index.cshtml 
+
+    @foreach (Dictionary<string, string> job in ViewBag.jobs)
+    {
+        <table class="job-listing">
+            <tr>
+                @foreach (KeyValuePair<string, string> kvp in job)
+                {
+                    <td>@kvp.Value</td>
+                }
+            </tr>
+        </table>
+   }
+ }
