--- a/src/TechJobs/Views/Search/Index.cshtml
+++ b/src/TechJobs/Views/Search/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿<h1>@ViewBag.title</h1>
 
-<form action="/Search/Results">
+<form action="/Search/Results" method="post"> 
     <h2>Search by:</h2>
 
     <p>
@@ -33,4 +33,19 @@
     <h3>@ViewBag.jobs.Count Result(s)</h3>
 
     // TODO #2 - Loop over jobs dictionary and display all job fields 
+
+
+
+    @foreach (Dictionary<string,string> job in ViewBag.jobs)
+    {
+        <table class="job-listing">
+            <tr>
+                @foreach (KeyValuePair<string, string> kvp in job)
+                {
+                    <td>@kvp.Value</td>
+                }
+            </tr>
+        </table>
+    }
+
 }
