--- a/src/TechJobs/Views/Search/Index.cshtml
+++ b/src/TechJobs/Views/Search/Index.cshtml
@@ -39,12 +39,14 @@
     @foreach (Dictionary<string,string> job in ViewBag.jobs)
     {
         <table class="job-listing">
-            <tr>
                 @foreach (KeyValuePair<string, string> kvp in job)
                 {
-                    <td>@kvp.Value</td>
+                    
+                        <tr>
+                            <td>@kvp.Key</td>
+                            <td>@kvp.Value</td>
+                        </tr>
                 }
-            </tr>
         </table>
     }
 
